err.log
In file included from ./src/ffmpeg.c:4:0:
./include/base.h:56:0: warning: "ERROR" redefined
 #define ERROR  1
 
In file included from c:\program files\git\mingw32\include\windows.h:46:0,
                 from ./include/base.h:18,
                 from ./src/ffmpeg.c:4:
c:\program files\git\mingw32\include\wingdi.h:348:0: note: this is the location of the previous definition
 #define ERROR       0
 
In file included from ./src/ffmpeg.c:4:0:
./include/base.h:187:0: warning: "max" redefined
 #define max(a,b)    (((a) > (b)) ? (a) : (b))
 
In file included from c:\program files\git\mingw32\include\windows.h:42:0,
                 from ./include/base.h:18,
                 from ./src/ffmpeg.c:4:
c:\program files\git\mingw32\include\windef.h:162:0: note: this is the location of the previous definition
 #define max(a,b) ((a)>(b)?(a):(b))
 
In file included from ./src/ffmpeg.c:4:0:
./include/base.h:188:0: warning: "min" redefined
 #define min(a,b)    (((a) < (b)) ? (a) : (b))
 
In file included from c:\program files\git\mingw32\include\windows.h:42:0,
                 from ./include/base.h:18,
                 from ./src/ffmpeg.c:4:
c:\program files\git\mingw32\include\windef.h:165:0: note: this is the location of the previous definition
 #define min(a,b) ((a)<(b)?(a):(b))
 
./src/ffmpeg.c: In function 'clean_encode':
./src/ffmpeg.c:29:9: warning: 'av_free_packet' is deprecated [-Wdeprecated-declarations]
         av_free_packet(out->packet);
         ^~~~~~~~~~~~~~
In file included from ./include/ffmpeg.h:4:0,
                 from ./src/ffmpeg.c:3:
./ffmpeg/x86/include/libavcodec/avcodec.h:4400:6: note: declared here
 void av_free_packet(AVPacket *pkt);
      ^~~~~~~~~~~~~~
./src/ffmpeg.c: In function 'ffmpeg_encode':
./src/ffmpeg.c:60:5: warning: 'av_register_all' is deprecated [-Wdeprecated-declarations]
     av_register_all();
     ^~~~~~~~~~~~~~~
In file included from ./include/ffmpeg.h:5:0,
                 from ./src/ffmpeg.c:3:
./ffmpeg/x86/include/libavformat/avformat.h:2025:6: note: declared here
 void av_register_all(void);
      ^~~~~~~~~~~~~~~
./src/ffmpeg.c:62:5: warning: implicit declaration of function 'avdevice_register_all' [-Wimplicit-function-declaration]
     avdevice_register_all();
     ^~~~~~~~~~~~~~~~~~~~~
./src/ffmpeg.c:102:9: warning: 'codec' is deprecated [-Wdeprecated-declarations]
         if(format_ctx->streams[i]->codec->codec_type==AVMEDIA_TYPE_VIDEO)
         ^~
In file included from ./include/ffmpeg.h:5:0,
                 from ./src/ffmpeg.c:3:
./ffmpeg/x86/include/libavformat/avformat.h:877:21: note: declared here
     AVCodecContext *codec;
                     ^~~~~
./src/ffmpeg.c:113:5: warning: 'codec' is deprecated [-Wdeprecated-declarations]
     codec_ctx=format_ctx->streams[videoindex]->codec;
     ^~~~~~~~~
In file included from ./include/ffmpeg.h:5:0,
                 from ./src/ffmpeg.c:3:
./ffmpeg/x86/include/libavformat/avformat.h:877:21: note: declared here
     AVCodecContext *codec;
                     ^~~~~
./src/ffmpeg.c:140:5: warning: 'avpicture_get_size' is deprecated [-Wdeprecated-declarations]
     out_buffer = (uint8_t *)av_malloc(avpicture_get_size(AV_PIX_FMT_YUV420P, 1920, 1080));
     ^~~~~~~~~~
In file included from ./include/ffmpeg.h:4:0,
                 from ./src/ffmpeg.c:3:
./ffmpeg/x86/include/libavcodec/avcodec.h:5434:5: note: declared here
 int avpicture_get_size(enum AVPixelFormat pix_fmt, int width, int height);
     ^~~~~~~~~~~~~~~~~~
./src/ffmpeg.c:141:5: warning: 'avpicture_fill' is deprecated [-Wdeprecated-declarations]
     avpicture_fill((AVPicture *)frame_yuv, out_buffer, AV_PIX_FMT_YUV420P, 1920, 1080);
     ^~~~~~~~~~~~~~
In file included from ./include/ffmpeg.h:4:0,
                 from ./src/ffmpeg.c:3:
./ffmpeg/x86/include/libavcodec/avcodec.h:5419:5: note: declared here
 int avpicture_fill(AVPicture *picture, const uint8_t *ptr,
     ^~~~~~~~~~~~~~
./src/ffmpeg.c:202:13: warning: 'avcodec_decode_video2' is deprecated [-Wdeprecated-declarations]
             ret = avcodec_decode_video2(codec_ctx, frame, &got_picture, packet);
             ^~~
In file included from ./include/ffmpeg.h:4:0,
                 from ./src/ffmpeg.c:3:
./ffmpeg/x86/include/libavcodec/avcodec.h:4755:5: note: declared here
 int avcodec_decode_video2(AVCodecContext *avctx, AVFrame *picture,
     ^~~~~~~~~~~~~~~~~~~~~
./src/ffmpeg.c:206:17: warning: 'avcodec_encode_video2' is deprecated [-Wdeprecated-declarations]
                 ret = avcodec_encode_video2(h264codec_ctx, packet,frame_yuv, &got_picture);
                 ^~~
In file included from ./include/ffmpeg.h:4:0,
                 from ./src/ffmpeg.c:3:
./ffmpeg/x86/include/libavcodec/avcodec.h:5386:5: note: declared here
 int avcodec_encode_video2(AVCodecContext *avctx, AVPacket *avpkt,
     ^~~~~~~~~~~~~~~~~~~~~
./src/ffmpeg.c:214:9: warning: 'av_free_packet' is deprecated [-Wdeprecated-declarations]
         av_free_packet(packet);
         ^~~~~~~~~~~~~~
In file included from ./include/ffmpeg.h:4:0,
                 from ./src/ffmpeg.c:3:
./ffmpeg/x86/include/libavcodec/avcodec.h:4400:6: note: declared here
 void av_free_packet(AVPacket *pkt);
      ^~~~~~~~~~~~~~
./src/ffmpeg.c:232:5: warning: this 'if' clause does not guard... [-Wmisleading-indentation]
     if(format_ctx)
     ^~
./src/ffmpeg.c:234:2: note: ...this statement, but the latter is misleadingly indented as if it is guarded by the 'if'
  if(packet)
  ^~
./src/ffmpeg.c:235:3: warning: 'av_free_packet' is deprecated [-Wdeprecated-declarations]
   av_free_packet(packet);
   ^~~~~~~~~~~~~~
In file included from ./include/ffmpeg.h:4:0,
                 from ./src/ffmpeg.c:3:
./ffmpeg/x86/include/libavcodec/avcodec.h:4400:6: note: declared here
 void av_free_packet(AVPacket *pkt);
      ^~~~~~~~~~~~~~
./src/ffmpeg.c: In function 'clean_decode':
./src/ffmpeg.c:267:9: warning: 'av_free_packet' is deprecated [-Wdeprecated-declarations]
         av_free_packet(input->packet);
         ^~~~~~~~~~~~~~
In file included from ./include/ffmpeg.h:4:0,
                 from ./src/ffmpeg.c:3:
./ffmpeg/x86/include/libavcodec/avcodec.h:4400:6: note: declared here
 void av_free_packet(AVPacket *pkt);
      ^~~~~~~~~~~~~~
./src/ffmpeg.c: In function 'ffmpeg_decode':
./src/ffmpeg.c:298:9: warning: suggest parentheses around assignment used as truth value [-Wparentheses]
         if(codec = avcodec_find_decoder_by_name(decoder_name[i]))
         ^~
./src/ffmpeg.c:310:52: warning: passing argument 3 of 'avcodec_open2' makes pointer from integer without a cast [-Wint-conversion]
                 if(avcodec_open2(codec_ctx, codec, NULL < 0))
                                                    ^~~~
In file included from ./include/ffmpeg.h:4:0,
                 from ./src/ffmpeg.c:3:
./ffmpeg/x86/include/libavcodec/avcodec.h:4245:5: note: expected 'AVDictionary ** {aka struct AVDictionary **}' but argument is of type 'int'
 int avcodec_open2(AVCodecContext *avctx, const AVCodec *codec, AVDictionary **options);
     ^~~~~~~~~~~~~
./src/ffmpeg.c:330:15: error: wrong type argument to unary exclamation mark
  if(!frame || !packet)
               ^
./src/ffmpeg.c:349:3: warning: 'avcodec_decode_video2' is deprecated [-Wdeprecated-declarations]
   ret = avcodec_decode_video2(codec_ctx, frame, &got_picture, &packet);
   ^~~
In file included from ./include/ffmpeg.h:4:0,
                 from ./src/ffmpeg.c:3:
./ffmpeg/x86/include/libavcodec/avcodec.h:4755:5: note: declared here
 int avcodec_decode_video2(AVCodecContext *avctx, AVFrame *picture,
     ^~~~~~~~~~~~~~~~~~~~~
./src/ffmpeg.c:371:5: warning: this 'if' clause does not guard... [-Wmisleading-indentation]
     if(codec_ctx)
     ^~
./src/ffmpeg.c:374:2: note: ...this statement, but the latter is misleadingly indented as if it is guarded by the 'if'
  img_convert_ctx = NULL;
  ^~~~~~~~~~~~~~~
./src/ffmpeg.c:383:9: warning: 'return' with a value, in function returning void
  return (void *)0;
         ^
./src/ffmpeg.c:271:6: note: declared here
 void ffmpeg_decode(rfb_display *vid)
      ^~~~~~~~~~~~~
./src/ffmpeg.c:285:18: warning: variable 'input' set but not used [-Wunused-but-set-variable]
     input_stream input;
                  ^~~~~
./src/ffmpeg.c:274:9: warning: variable 'ret' set but not used [-Wunused-but-set-variable]
     int ret, got_picture;
         ^~~
make: *** [ffmpeg.o] Error 1
